[tool.poetry]
name = "airstreamlit"
version = "0.1.0"
description = "A streamlit app that display air quality information"
authors = ["Austin Powell <phystron@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
