[tool.poetry]
name = "airstreamlit"
version = "0.1.0"
description = "a dashboard for air quality"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10, 3.11, 3.12"
streamlit = "^1.38.0"
plotly = "^5.24.1"
pandas = "^2.2.2"
serial = "^0.0.97"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
